src/parser/WDL/antlr4/v1.1/WdlV1_1Parser.js
// Generated from ./WdlV1_1Parser.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import WdlV1_1ParserListener from './WdlV1_1ParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class WdlV1_1Parser extends antlr4.Parser {

    static grammarFileName = "WdlV1_1Parser.g4";
    static literalNames = [ null, null, "'version 1.1'", "'import'", "'workflow'", 
                            "'task'", "'struct'", "'scatter'", "'call'", 
                            "'if'", "'then'", "'else'", "'alias'", "'as'", 
                            "'in'", "'input'", "'output'", "'parameter_meta'", 
                            "'meta'", "'runtime'", "'Boolean'", "'Int'", 
                            "'Float'", "'String'", "'File'", "'Array'", 
                            "'Map'", "'Object'", "'object'", "'sep='", "'default='", 
                            "'Pair'", "'after'", "'command'", "'None'", 
                            null, null, null, "'('", "')'", null, null, 
                            "'['", null, "'\\'", null, "'<'", "'>'", "'>='", 
                            "'<='", "'=='", "'!='", "'='", "'&&'", "'||'", 
                            "'?'", "'*'", "'+'", "'-'", null, null, "';'", 
                            "'.'", "'!'", null, "'/'", "'%'", null, null, 
                            null, null, null, null, "'<<<'", null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, "'null'", 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, "'\\>>>'" ];
    static symbolicNames = [ null, "LINE_COMMENT", "VERSION", "IMPORT", 
                             "WORKFLOW", "TASK", "STRUCT", "SCATTER", "CALL", 
                             "IF", "THEN", "ELSE", "ALIAS", "AS", "In", 
                             "INPUT", "OUTPUT", "PARAMETERMETA", "META", 
                             "RUNTIME", "BOOLEAN", "INT", "FLOAT", "STRING", 
                             "FILE", "ARRAY", "MAP", "OBJECT", "OBJECTLITERAL", 
                             "SEPEQUAL", "DEFAULTEQUAL", "PAIR", "AFTER", 
                             "COMMAND", "NONELITERAL", "IntLiteral", "FloatLiteral", 
                             "BoolLiteral", "LPAREN", "RPAREN", "LBRACE", 
                             "RBRACE", "LBRACK", "RBRACK", "ESC", "COLON", 
                             "LT", "GT", "GTE", "LTE", "EQUALITY", "NOTEQUAL", 
                             "EQUAL", "AND", "OR", "OPTIONAL", "STAR", "PLUS", 
                             "MINUS", "DOLLAR", "COMMA", "SEMI", "DOT", 
                             "NOT", "TILDE", "DIVIDE", "MOD", "SQUOTE", 
                             "DQUOTE", "WHITESPACE", "Identifier", "StringPart", 
                             "BeginWhitespace", "BeginHereDoc", "BeginLBrace", 
                             "HereDocUnicodeEscape", "CommandUnicodeEscape", 
                             "StringCommandStart", "EndCommand", "CommandStringPart", 
                             "BeginMeta", "MetaWhitespace", "MetaBodyComment", 
                             "MetaIdentifier", "MetaColon", "EndMeta", "MetaBodyWhitespace", 
                             "MetaValueComment", "MetaBool", "MetaInt", 
                             "MetaFloat", "MetaNull", "MetaSquote", "MetaDquote", 
                             "MetaEmptyObject", "MetaEmptyArray", "MetaLbrack", 
                             "MetaLbrace", "MetaValueWhitespace", "MetaStringPart", 
                             "MetaArrayComment", "MetaArrayCommaRbrack", 
                             "MetaArrayComma", "MetaRbrack", "MetaArrayWhitespace", 
                             "MetaObjectIdentifier", "MetaObjectColon", 
                             "MetaObjectCommaRbrace", "MetaObjectComma", 
                             "MetaRbrace", "MetaObjectWhitespace", "HereDocEscapedEnd" ];
    static ruleNames = [ "map_type", "array_type", "pair_type", "type_base", 
                         "wdl_type", "unbound_decls", "bound_decls", "any_decls", 
                         "number", "expression_placeholder_option", "string_part", 
                         "string_expr_part", "string_expr_with_string_part", 
                         "string", "primitive_literal", "expr", "expr_infix", 
                         "expr_infix0", "expr_infix1", "expr_infix2", "expr_infix3", 
                         "expr_infix4", "expr_infix5", "member", "expr_core", 
                         "import_alias", "import_as", "import_doc", "struct", 
                         "meta_value", "meta_string_part", "meta_string", 
                         "meta_array", "meta_object", "meta_object_kv", 
                         "meta_kv", "parameter_meta", "meta", "task_runtime_kv", 
                         "task_runtime", "task_input", "task_output", "task_command_string_part", 
                         "task_command_expr_part", "task_command_expr_with_string", 
                         "task_command", "task_element", "task", "inner_workflow_element", 
                         "call_alias", "call_input", "call_inputs", "call_body", 
                         "call_after", "call_name", "call", "scatter", "conditional", 
                         "workflow_input", "workflow_output", "workflow_element", 
                         "workflow", "document_element", "document" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = WdlV1_1Parser.ruleNames;
        this.literalNames = WdlV1_1Parser.literalNames;
        this.symbolicNames = WdlV1_1Parser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 17:
    	    		return this.expr_infix0_sempred(localctx, predIndex);
    	case 18:
    	    		return this.expr_infix1_sempred(localctx, predIndex);
    	case 19:
    	    		return this.expr_infix2_sempred(localctx, predIndex);
    	case 20:
    	    		return this.expr_infix3_sempred(localctx, predIndex);
    	case 21:
    	    		return this.expr_infix4_sempred(localctx, predIndex);
    	case 24:
    	    		return this.expr_core_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_infix0_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix1_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix2_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix3_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix4_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		case 12:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_core_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 13:
    			return this.precpred(this._ctx, 6);
    		case 14:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	map_type() {
	    let localctx = new Map_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, WdlV1_1Parser.RULE_map_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(WdlV1_1Parser.MAP);
	        this.state = 129;
	        this.match(WdlV1_1Parser.LBRACK);
	        this.state = 130;
	        this.wdl_type();
	        this.state = 131;
	        this.match(WdlV1_1Parser.COMMA);
	        this.state = 132;
	        this.wdl_type();
	        this.state = 133;
	        this.match(WdlV1_1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array_type() {
	    let localctx = new Array_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, WdlV1_1Parser.RULE_array_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(WdlV1_1Parser.ARRAY);
	        this.state = 136;
	        this.match(WdlV1_1Parser.LBRACK);
	        this.state = 137;
	        this.wdl_type();
	        this.state = 138;
	        this.match(WdlV1_1Parser.RBRACK);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===57) {
	            this.state = 139;
	            this.match(WdlV1_1Parser.PLUS);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pair_type() {
	    let localctx = new Pair_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, WdlV1_1Parser.RULE_pair_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(WdlV1_1Parser.PAIR);
	        this.state = 143;
	        this.match(WdlV1_1Parser.LBRACK);
	        this.state = 144;
	        this.wdl_type();
	        this.state = 145;
	        this.match(WdlV1_1Parser.COMMA);
	        this.state = 146;
	        this.wdl_type();
	        this.state = 147;
	        this.match(WdlV1_1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_base() {
	    let localctx = new Type_baseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, WdlV1_1Parser.RULE_type_base);
	    var _la = 0;
	    try {
	        this.state = 153;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 149;
	            this.array_type();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 150;
	            this.map_type();
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 151;
	            this.pair_type();
	            break;
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 27:
	        case 70:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 152;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 166723584) !== 0) || _la===70)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wdl_type() {
	    let localctx = new Wdl_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, WdlV1_1Parser.RULE_wdl_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 155;
	            this.type_base();
	            this.state = 156;
	            this.match(WdlV1_1Parser.OPTIONAL);
	            break;

	        case 2:
	            this.state = 158;
	            this.type_base();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unbound_decls() {
	    let localctx = new Unbound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, WdlV1_1Parser.RULE_unbound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 161;
	        this.wdl_type();
	        this.state = 162;
	        this.match(WdlV1_1Parser.Identifier);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bound_decls() {
	    let localctx = new Bound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, WdlV1_1Parser.RULE_bound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        this.wdl_type();
	        this.state = 165;
	        this.match(WdlV1_1Parser.Identifier);
	        this.state = 166;
	        this.match(WdlV1_1Parser.EQUAL);
	        this.state = 167;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	any_decls() {
	    let localctx = new Any_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, WdlV1_1Parser.RULE_any_decls);
	    try {
	        this.state = 171;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 169;
	            this.unbound_decls();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 170;
	            this.bound_decls();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, WdlV1_1Parser.RULE_number);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        _la = this._input.LA(1);
	        if(!(_la===35 || _la===36)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression_placeholder_option() {
	    let localctx = new Expression_placeholder_optionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, WdlV1_1Parser.RULE_expression_placeholder_option);
	    try {
	        this.state = 185;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 175;
	            this.match(WdlV1_1Parser.BoolLiteral);
	            this.state = 176;
	            this.match(WdlV1_1Parser.EQUAL);
	            this.state = 177;
	            this.string();
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 178;
	            this.match(WdlV1_1Parser.DEFAULTEQUAL);
	            this.state = 181;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 67:
	            case 68:
	                this.state = 179;
	                this.string();
	                break;
	            case 35:
	            case 36:
	                this.state = 180;
	                this.number();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;
	        case 29:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 183;
	            this.match(WdlV1_1Parser.SEPEQUAL);
	            this.state = 184;
	            this.string();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_part() {
	    let localctx = new String_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, WdlV1_1Parser.RULE_string_part);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===71) {
	            this.state = 187;
	            this.match(WdlV1_1Parser.StringPart);
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_expr_part() {
	    let localctx = new String_expr_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, WdlV1_1Parser.RULE_string_expr_part);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this.match(WdlV1_1Parser.StringCommandStart);
	        this.state = 197;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 194;
	                this.expression_placeholder_option(); 
	            }
	            this.state = 199;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 200;
	        this.expr();
	        this.state = 201;
	        this.match(WdlV1_1Parser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_expr_with_string_part() {
	    let localctx = new String_expr_with_string_partContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, WdlV1_1Parser.RULE_string_expr_with_string_part);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.string_expr_part();
	        this.state = 204;
	        this.string_part();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, WdlV1_1Parser.RULE_string);
	    var _la = 0;
	    try {
	        this.state = 226;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 68:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 206;
	            this.match(WdlV1_1Parser.DQUOTE);
	            this.state = 207;
	            this.string_part();
	            this.state = 211;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===77) {
	                this.state = 208;
	                this.string_expr_with_string_part();
	                this.state = 213;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 214;
	            this.match(WdlV1_1Parser.DQUOTE);
	            break;
	        case 67:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 216;
	            this.match(WdlV1_1Parser.SQUOTE);
	            this.state = 217;
	            this.string_part();
	            this.state = 221;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===77) {
	                this.state = 218;
	                this.string_expr_with_string_part();
	                this.state = 223;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 224;
	            this.match(WdlV1_1Parser.SQUOTE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primitive_literal() {
	    let localctx = new Primitive_literalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, WdlV1_1Parser.RULE_primitive_literal);
	    try {
	        this.state = 233;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 228;
	            this.match(WdlV1_1Parser.BoolLiteral);
	            break;
	        case 35:
	        case 36:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 229;
	            this.number();
	            break;
	        case 67:
	        case 68:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 230;
	            this.string();
	            break;
	        case 34:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 231;
	            this.match(WdlV1_1Parser.NONELITERAL);
	            break;
	        case 70:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 232;
	            this.match(WdlV1_1Parser.Identifier);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, WdlV1_1Parser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 235;
	        this.expr_infix();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr_infix() {
	    let localctx = new Expr_infixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, WdlV1_1Parser.RULE_expr_infix);
	    try {
	        localctx = new Infix0Context(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this.expr_infix0(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr_infix0(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Expr_infix0Context(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 34;
	    this.enterRecursionRule(localctx, 34, WdlV1_1Parser.RULE_expr_infix0, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new Infix1Context(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 240;
	        this.expr_infix1(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 247;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new LorContext(this, new Expr_infix0Context(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, WdlV1_1Parser.RULE_expr_infix0);
	                this.state = 242;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 243;
	                this.match(WdlV1_1Parser.OR);
	                this.state = 244;
	                this.expr_infix1(0); 
	            }
	            this.state = 249;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }
